--- a/index.html
+++ b/index.html
@@ -122,6 +122,18 @@ https://templatemo.com/tm-579-cyborg-gaming
       <h5 class="summary"><em>Summary:</em><br>1. Accuracy <br>2. Speed <br>3. Press <em>Enter</em> if something unexpected happens</h5>
     </div>
 
+    <hr>
+
+    <div class="rules">
+      <h5 class="description">
+        In order to perform this experiment, you will need to <em>share a photo with us</em>. (The photo is not store)<br>
+        The photo should show the <em>easily-recognised face of someone you love</em>, a family member or the closest of friends.<br>
+        Please <em>do not use a celebrity crush</em> or a <em>pet</em>.<br>
+        To upload your photo, please <em>click below</em>.<br>
+        Thank you.
+      </h5>
+    </div>
+
     <div>
       <input type="file" id="file-selector" accept=".jpg, .jpeg, .png">
     </div>
