--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@ https://templatemo.com/tm-579-cyborg-gaming
         <div class="col-lg-12">
           <div class="page-content" id="startPage">
             <div class="heading-section">
-              <h4>Thanks for your participation</h4>
+              <h4>Thanks for your participation.</h4>
+              <h4>Please take 2 minutes to fill in the form below.</h4>
             </div>
 
             <div class="row">
@@ -233,6 +234,7 @@ https://templatemo.com/tm-579-cyborg-gaming
               </div>
             </div>
 
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc70ORAvbBMuwkSScgZ-1tVjyFG_isVFR4DEgyAQRlD24PT3g/viewform?embedded=true" width="640" height="1254" frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe>
           </div>
         </div>
       </div>
